# study_to_live

./: .gitignore  BonusColumn.py  Classes.py  Classes2.py  ComplexCondition.py  DB_main.py  PriceMarkCalc.py  TestingPrices.py  VedomostCell.py  analytic_utilities.py  analytics.py  async_func.py  bot_handlers.py  bot_main.py  classes.py  complex_coef.py  config.py  config_reader.py  day_row.py  keyboards.py  my_bot.py  new_table_upload.py  path_maker.py  program2.py  programm.py  pyproject.toml  stady_to_live_bot.py  statistic.py  test.py  testing.py  training.py  vedomost_filler.py
Stadytolivebot/: stady_to_live_bot.py
counter/: PriceMarkCalc.py  classes.py  complex_coef.py  program2.py
database/: database.py  mirror.py  test_miror.py
dialog/: getters.py  inlines.py  kbs.py  keyboards.py  my_windows.py  new_handlers.py  row_len_analyzer.py  selected.py  session_db.py  start_handlers.py  states.py  windows.py
filler/: date_constants.py  date_funcs.py  day_row.py  manual_filling_cells.py  recipient.py  vedomost_cell.py  vedomost_filler.py
handlers/: UserDB.py  bot_handlers.py  inlines.py  keyboards.py  new_handlers.py  row_len_analyzer.py  session_db.py
months/apr23/: .~lock.apr23.xlsx#  apr23.xlsx
months/aug23/: aug23.xlsx
months/dec22/: price.csv  vedomost.csv
months/dec22test/: FOR_TEST.csv  dec22.xlsx  price.csv
months/fb23/: fb23.xlsx
months/m23/: m23.xlsx
row_db/: DB_main.py  mirror_db.py  row_db.py  unfilled_rows_db.py
temp_db/: mirror_db.py  recipes.py  test_miror.py  unfilled_rows_db.py
tests/: new_test.csv
utils/: analytics.py  converter.py
(+24 files in other folders)
