[tool.poetry]
name = "study_to_live"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
colorama = "^0.4.6"
pyTelegramBotAPI = "^4.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
