[tool.poetry]
name = "study_to_live"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]

packages = [{include = "dialog"}]

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.0.10"
colorama = "^0.4.6"
aiogram = "^3.0.0"
pathlib = "^1.0.1"
emoji = "^2.10.1"
aiogram-dialog = "^2.1.0"
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
pydantic-settings = "^2.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
bot = "bot_main:bot_run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
